# MTMH-BE

./: README.md
bolsig_wrapper/: bolsig_input_wrap.m  combine_bolsig.m  extract_bolsigsdf.m  regrid_for_bolsig.m  run_bolsig_old.m  run_bolsig_species_sweep.m
lxcat_files/: .gitignore  Biagi_N2.txt  Biagi_N2_rev.txt  Biagi_O2_rev.txt  Biagi_O2_stephens_p1atm.txt  Biagi_O2_stephens_psub1atm.txt  Lucas_Salee_1.txt  Lucas_Salee_2.txt  Lucas_Salee_3.txt  Lucas_Salee_4.txt  Lucas_Salee_5.txt  Lucas_Salee_6.txt  N2_LXCat.txt  RampReid.txt  lisbon_N2.txt  maxwellian_N100.txt  maxwellian_N1000.txt  maxwellian_N200.txt  maxwellian_N25.txt  maxwellian_N50.txt  maxwellian_N500.txt
mtmhbe_solver/: .gitignore  add_boltz_paths_new.m
mtmhbe_solver/cross_sections/: cross_sections_main.m  extended_linear_interp.m  read_lxcat_file.m
mtmhbe_solver/operators/: append_IJVZ.m  energy_grid.m  lkr_indices.m  matrix_main.m
mtmhbe_solver/plotting/: animate_pulse.m  animate_step_response.m  eedf_index.m  plot_defaults.m  plot_eedf.m  plot_jac.m
mtmhbe_solver/solvers_fortran/: .gitignore  export_operators.m
mtmhbe_solver/solvers_matlab/: ebe_solution.m  eedf_moments.m  new_bz.m  newton_step.m  qss_solver.m  solver_main.m  species_fractions.m
mtmhbe_solver/utilities/: boltz_constants.m  convert_sparse_format.m  pulse_lokib.m  (+4 more)
multibolt_timing/: README.md
multibolt_timing/drivers/grid_study_laporta/: .gitignore  CMakeLists.txt  grid_study_laporta.cpp  grid_study_laporta_auto.sh  grid_study_laporta_linear.sh  nova_launch.sh
multibolt_wrapper/: extract_multibolt.m  run_multibolt.m
(+142 files in other folders)
